--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/internal/ui/preferences/MyPreferencesMessages.properties
@@ -15,8 +15,8 @@ JavaEditorCodeMiningConfigurationBlock_section_methodParameter=&Method parameter
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterNames_label=Show method parameter names
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterTypes_label=Show method parameter types
 JavaEditorCodeMiningConfigurationBlock_showMethodParameterOnlyForLiteral_label=Show parameter only for literal
-JavaEditorCodeMiningConfigurationBlock_showMethodParameterByUsingFilters_label=Show parameter by using filters
-JavaEditorCodeMiningConfigurationBlock_filtersButton=Browse filters...
+JavaEditorCodeMiningConfigurationBlock_showMethodParameterByUsingFilters_label=Show parameter by using filters:
+JavaMethodFiltersTable_description=Define Java method to filter
 # JUnit section
 JavaEditorCodeMiningConfigurationBlock_section_junit=&JUnit
 JavaEditorCodeMiningConfigurationBlock_showJUnitStatus_label=Show JUnit status
