--- a/org.eclipse.jdt.codemining/plugin.properties
+++ b/org.eclipse.jdt.codemining/plugin.properties
@@ -15,4 +15,4 @@ JavaCodeMiningProvider.label=Java reference/implementation minings
 JavaMethodParameterCodeMiningProvider.label=Java method parameter minings
 JUnitCodeMiningProvider.label=JUnit status/run/debug minings
 
-codeMiningPageName=Code Minings
+codeMiningPageName=Code Minings (Experimental)
