Split code mining providers to contribute to org.eclipse.jdt.ui & org.eclipse.jdt.debug.ui

--- a/org.eclipse.jdt.codemining/plugin.properties
+++ b/org.eclipse.jdt.codemining/plugin.properties
@@ -11,8 +11,10 @@
 providerName=Angelo ZERR
 pluginName=JDT CodeMining
 
-JavaCodeMiningProvider.label=Java reference/implementation minings
-JavaMethodParameterCodeMiningProvider.label=Java method parameter minings
+JavaElementCodeMiningProvider.label=Java element code minings provider
+JavaASTCodeMiningProvider.label=Java AST code minings provider
+JavaDebugElementCodeMiningProvider.label=Java debug code minings provider
+JavaLaunchingCodeMiningProvider.label=Java launching code mining providers
 JUnitCodeMiningProvider.label=JUnit status/run/debug minings
 
 codeMiningPageName=Code Minings (Experimental)
