Fixed #75: Added support for configuring type of reference to show
Added settings to configure whether to show reference on
- class
- method
- or both

Change-Id: I787f018789c308faa41436cb3184aea6f9ef2f28
Signed-off-by: Gayan Perera <gayanper@gmail.com>

--- a/org.eclipse.jdt.codemining/src/org/eclipse/jdt/experimental/ui/preferences/MyPreferencesMessages.properties
+++ b/org.eclipse.jdt.codemining/src/org/eclipse/jdt/experimental/ui/preferences/MyPreferencesMessages.properties
@@ -2,6 +2,8 @@
 JavaEditorCodeMiningConfigurationBlock_common_description=&Select the code minings that you wish to enable/disable:
 JavaEditorCodeMiningConfigurationBlock_section_general=&General
 JavaEditorCodeMiningConfigurationBlock_showReferences_label=Show references
+JavaEditorCodeMiningConfigurationBlock_showReferencesClass_label=On classes
+JavaEditorCodeMiningConfigurationBlock_showReferencesMethod_label=On methods
 JavaEditorCodeMiningConfigurationBlock_showReferences_atLeastOne_label=Only if there is at least one reference
 JavaEditorCodeMiningConfigurationBlock_showImplementations_label=Show implementations
 JavaEditorCodeMiningConfigurationBlock_showImplementations_atLeastOne_label=Only if there is at least one implementation
